# quarticRootsFlocke

./: .gitignore  CMakeLists.txt  LICENSE  README.rst
